--- a/core/templates/layout.html
+++ b/core/templates/layout.html
@@ -6,6 +6,8 @@
         <meta name="keywords" content="XXXXXXX" />
         <meta name="description" content="XXXXXXX" />
         <meta name="copyright" content="Copyright 2010 Emanuele Bertoldi" />
+        <link rel="stylesheet" type="text/css" href="/media/css/default/tripoli.simple.css" /> 
+        <!--[if IE]><link rel="stylesheet" type="text/css" href="/media/css/default/tripoli.simple.ie.css" /><![endif]-->
         <link rel="stylesheet" href="/media/css/default/style.css" type="text/css" charset="utf-8" />
         {% block js %}
         {% endblock %}
