--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -22,6 +22,8 @@ __version__ = '$Revision: 4 $'
 
 # Django settings for prometeo project.
 
+import os
+
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 
@@ -55,19 +57,21 @@ SITE_ID = 1
 # to load the internationalization machinery.
 USE_I18N = True
 
+
+
 # Absolute path to the directory that holds media.
 # Example: "/home/media/media.lawrence.com/"
-MEDIA_ROOT = ''
+MEDIA_ROOT = os.path.join(os.getcwd(), "media/")
 
 # URL that handles the media served from MEDIA_ROOT. Make sure to use a
 # trailing slash if there is a path component (optional in other cases).
 # Examples: "http://media.lawrence.com", "http://example.com/media/"
-MEDIA_URL = ''
+MEDIA_URL = '/media/'
 
 # URL prefix for admin media -- CSS, JavaScript and images. Make sure to use a
 # trailing slash.
 # Examples: "http://foo.com/media/", "/media/".
-ADMIN_MEDIA_PREFIX = '/media/'
+ADMIN_MEDIA_PREFIX = '/media/admin/'
 
 # Make this unique, and don't share it with anybody.
 SECRET_KEY = '@0+5@-j+%_=c248g!5t)0qj2kkx(jo2um1epqz=a1$vc=745)2'
@@ -98,5 +102,5 @@ INSTALLED_APPS = (
     'django.contrib.contenttypes',
     'django.contrib.sessions',
     'django.contrib.sites',
-    'core'
+    'prometeo.core'
 )
