Menu style improved.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@7 71535020-02ba-11df-897e-95fb7fca2173

--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -289,10 +289,11 @@ input[type="submit"]:hover {
     padding: 10px 15px;
     background: url(images/menu.jpg) repeat-x bottom;
     margin-top: -9px;
+    margin-right: 1px;
 }
 
 #menu li.selected {
-    background: #f0f0f0;
+    background: url(images/menu_selected.jpg) repeat-x bottom;
 }
 
 #breadcrumb {
