--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -102,5 +102,10 @@ INSTALLED_APPS = (
     'django.contrib.contenttypes',
     'django.contrib.sessions',
     'django.contrib.sites',
-    'prometeo.core'
+    'prometeo.core',
+    'prometeo.accounts'
 )
+
+# Default views for login.
+LOGIN_URL = '/accounts/login'
+LOGIN_REDIRECT_URL = '/'
