Better style rules for quickmenu rendering on small screens.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@11 71535020-02ba-11df-897e-95fb7fca2173

--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -286,7 +286,10 @@ form .message {
 
 #quickmenu {
     float: right;
-    margin-top: -75px;
+    width: 52%;
+    margin-top: -80px;
+    text-align: right;
+    line-height: 20px;
 }
 
 #quickmenu li { 
