--- a/accounts/templates/accounts/menu.html
+++ b/accounts/templates/accounts/menu.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <ul id="menu">
-    <li><a class="start" href="/">Start</a></li>
+    <li><a class="start" href="/">{% trans 'Start' %}</a></li>
 </ul>
