--- a/accounts/templates/accounts/add.html
+++ b/accounts/templates/accounts/add.html
@@ -1,15 +1,17 @@
 {% extends 'layout.html' %}
 
-{% block title %}Accounts{% endblock %}
+{% load i18n %}
 
-{% block breadcrumb %}<h2>Accounts > Add</h2>{% endblock %}
+{% block title %}{% trans 'Accounts' %}{% endblock %}
+
+{% block breadcrumb %}<h2>{% trans 'Accounts' %} > {% trans 'Add' %}</h2>{% endblock %}
 
 {% block content %}
     <form action="/accounts/add/" method="post">
         {{ form.as_p }}
-        <input class="save" type="submit" value="Save"/>
+        <input class="save" type="submit" value="{% trans 'Save' %}"/>
     </form>
     <ul class="actions">
-        <li><a class="people" href="/accounts/">Accounts</a></li>
+        <li><a class="people" href="/accounts/">{% trans 'Accounts' %}</a></li>
     </ul>
 {% endblock %}
