--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -139,7 +139,7 @@ input[type="text"], input[type="password"], select, textarea {
 
 input[type="text"], input[type="password"], select { 
     width: 50%;
-    height: 18px;
+    height: 20px;
     font-size: 14px;
 }
 
@@ -153,6 +153,8 @@ label {
     width: 25%;
     margin-right: 10px;
     text-align: right;
+    margin-top: 0.2em;
+    color: black;
 }
 
 legend {
@@ -183,6 +185,11 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
 	color: #f00;
+}
+
+form p {
+    text-align: center;
+    color: #157017;
 }
 
 /* Commons */
