Style of messages fixed.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@17 71535020-02ba-11df-897e-95fb7fca2173

--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -217,6 +217,11 @@ form p {
     border: 1px solid #ccc;
 }
 
+.message p {
+    text-align: left;
+    color: black;
+}
+
 form .message {
     width: 100%;
     padding: 0;
