Better search form's style.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@18 71535020-02ba-11df-897e-95fb7fca2173

--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -359,6 +359,12 @@ form .message {
     float: right;
 }
 
+#search form {
+    border: none;
+    margin: 0;
+    width: auto;
+}
+
 #search input {
     clear: none;
     display: inline;
