- Merged "accounts" and "core" applications. - Added dynamic menu system based on "django-nav" idea.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@19 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -14,7 +14,7 @@
 </div>
 {% endif %}
 
-<form method="post" action="{% url django.contrib.auth.views.login %}">
+<form method="post" action="/accounts/login/">
     <input type="hidden" name="next" value="{{ next }}" />
     
     {{ form.username.label_tag }}
