--- a/core/templates/layout.html
+++ b/core/templates/layout.html
@@ -22,8 +22,8 @@
             </div>
             <div id="nav">
                 {% block nav %}
-                {% include "accounts/quickmenu.html" %}
-                {% include "accounts/menu.html" %}
+                {% include "accounts/userarea.html" %}
+                {% include "menu/menubar.html" %}
                 <div id="breadcrumb">
                     {% block breadcrumb %}
                     {% endblock %}
