Added codebase for "partners" module.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@23 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/accounts/userarea.html
+++ b/core/templates/accounts/userarea.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div id="quickmenu">
+<div id="userarea">
     <ul>
         {% if user.is_authenticated %}
         <li><a class="exit" href="/accounts/logout/">{% trans 'Logout' %}</a></li>
