Better feedback when a list is empty.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@26 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/accounts/index.html
+++ b/core/templates/accounts/index.html
@@ -13,6 +13,7 @@
             <input type="submit" name="search" class="search" value="{% trans 'Search' %}"/>
         </form>
     </div>
+    {% if accounts %}
     <table>
         <thead>
             <td>{% trans 'Username' %}</td>
@@ -23,6 +24,9 @@
         </tr>
         {% endfor %}
     </table>
+    {% else %}
+    <p class="disabled">{% trans 'empty' %}.</p>
+    {% endif %}
     <ul class="actions">
         <li><a class="add" href="/accounts/add/">{% trans 'Add' %}</a></li>
     </ul>
