--- a/partners/templates/partners/index.html
+++ b/partners/templates/partners/index.html
@@ -13,6 +13,7 @@
             <input type="submit" name="search" class="search" value="{% trans 'Search' %}"/>
         </form>
     </div>
+    {% if partners %}
     <table>
         <thead>
             <td>{% trans 'Name' %}</td>
@@ -27,6 +28,9 @@
         </tr>
         {% endfor %}
     </table>
+    {% else %}
+    <p class="disabled">{% trans 'empty' %}.</p>
+    {% endif %}
     <ul class="actions">
         <li><a class="add" href="/partners/add/">{% trans 'Add' %}</a></li>
     </ul>
