Ecapsulated "Details" header into {% trans %} templatetag.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@33 71535020-02ba-11df-897e-95fb7fca2173

--- a/products/templates/products/view.html
+++ b/products/templates/products/view.html
@@ -7,7 +7,7 @@
 {% block breadcrumb %}<h2>{% trans 'Products' %} > {% trans 'View' %} > {{ product }}</h2>{% endblock %}
 
 {% block content %}
-    <h3>Details</h3>
+    <h3>{% trans Details %}</h3>
     {{ details.as_dl }}
     <ul class="actions">
         <li><a class="edit" href="/products/edit/{{ product.id }}/">{% trans 'Edit' %}</a></li>
