--- a/warehouses/templates/warehouses/view.html
+++ b/warehouses/templates/warehouses/view.html
@@ -7,7 +7,7 @@
 {% block breadcrumb %}<h2>{% trans 'Warehouses' %} > {% trans 'View' %} > {{ warehouse }}</h2>{% endblock %}
 
 {% block content %}
-    <h3>{% trans Details %}</h3>
+    <h3>{% trans 'Details' %}</h3>
     {{ details.as_dl }}
     <ul class="actions">
         <li><a class="edit" href="/warehouses/edit/{{ warehouse.id }}/">{% trans 'Edit' %}</a></li>
