--- a/core/templates/layout.html
+++ b/core/templates/layout.html
@@ -35,7 +35,7 @@
                 {% endblock %}
             </div>
             <div id="footer">
-                <h6 id="copyright"><a href="mailto:zuck@fastwebnet.it">Emanuele Bertoldi</a> &copy; 2010</h6>
+                <h6 id="copyright"><a href="mailto:zuck@fastwebnet.it">Emanuele Bertoldi</a> &copy; {% now "Y" %}</h6>
             </div>
         </div>
     </body>
