--- a/partners/templates/partners/view.html
+++ b/partners/templates/partners/view.html
@@ -7,7 +7,7 @@
 {% block breadcrumb %}<h2>{% trans 'Partners' %} > {% trans 'View' %} > {{ partner }}</h2>{% endblock %}
 
 {% block content %}
-    <h3>{% trans Details %}</h3>
+    <h3>{% trans 'Details' %}</h3>
     {{ details.as_dl }}
     <ul class="actions">
         <li><a class="edit" href="/partners/edit/{{ partner.id }}/">{% trans 'Edit' %}</a></li>
