--- a/core/templates/menu/menu.html
+++ b/core/templates/menu/menu.html
@@ -1,5 +1,5 @@
 <li>
-    <a{% if menu.active %} class="active"{% endif %} href="{{ menu.link }}"><span class="{{ menu.name }}">{{ menu.name|title }}</span></a>
+    <a{% if menu.active %} class="active"{% endif %} href="{{ menu.link }}"><span class="{{ menu.name }}">{{ menu.name }}</span></a>
     {% if menu.option_list %}
     <ul class="options">
         {% for option in menu.option_list %}
