--- a/core/templates/menu/option.html
+++ b/core/templates/menu/option.html
@@ -1,5 +1,5 @@
 <li>
-    <a href="{{ option.link }}"><span class="{{ option.name }}">{{ option.name }}</span></a>
+    <a href="{{ option.link }}"><span class="{{ option.name|lower }}">{{ option.name }}</span></a>
     {% if option.option_list %}
     <ul class="options">
         {% for opt in option.option_list %}
